@startuml

title __TRANSPORTER's Class Diagram__\n

  package com.company.model.transporter {
    class CarFerry {
        - flatbed : Flatbed<Car>
        + CarFerry()
        + speedFactor()
        + load()
        + unload()
        + getFlatbed()
    }
  }
  

  package com.company.model.transporter {
    class CarTransport {
        - flatbed : Flatbed<Car>
        + CarTransport()
        + speedFactor()
        + move()
        + load()
        + unload()
        + openRamp()
        + closeRamp()
        + getFlatbed()
    }
  }
  

  package com.company.model.transporter {
    class Flatbed {
        - angle : double
        - stoppedAngle : double
        + Flatbed()
        + getAngle()
        + setAngle()
        + addLoad()
        + getFIFO()
        + getFILO()
    }
  }
  

  package com.company.model.transporter {
    class Scania {
        - flatbed : Flatbed<ITransportable>
        + Scania()
        + Scania()
        + speedFactor()
        + move()
        + increaseAngle()
        + decreaseAngle()
        + load()
        + unload()
        + getFlatbed()
    }
  }
  

  CarFerry -up-|> Vehicle
  CarTransport -up-|> Vehicle
  Flatbed -up-|> Storage
  Scania -up-|> Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
